log/build_2024-12-06_08-45-59/robot_description/stderr.log
  File "/home/azakaria/Documents/sim_v2/ros2_ws/install/robot_description/lib/python3.12/site-packages/robot_description/mape_node_v7.py", line 258
    cmd_vel.angular.z = kp_angular * 
                                     ^
SyntaxError: invalid syntax

